--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,3 @@
-repositories {
-    jcenter()
-    mavenCentral()
-}
 
 buildscript {
     ext {
@@ -14,23 +10,37 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'com.jfrog.bintray.gradle', name: 'gradle-bintray-plugin', version: '1.7.3'
+		classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
     }
 }
 
-group project_group
-version project_version
+
+plugins {
+    id 'io.codearte.nexus-staging' version '0.11.0'
+}
+
 
 apply plugin: 'java'
 apply plugin: 'java-library'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
-apply plugin: 'jacoco'
 
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 
-apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.bmuschko.nexus'
+
+test {
+    exclude '**/*'
+}
+
+// In this section you declare where to find the dependencies of your project
+repositories {
+    // Use jcenter for resolving your dependencies.
+    // You can declare any Maven/Ivy/file repository here.
+    maven { url "https://repo.maven.apache.org/maven2" }
+	jcenter()
+    //maven { url "http://mvnrepository.com/artifact" }
+}
+
 
 dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
@@ -39,59 +49,52 @@ dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
-jar {
-    manifest {
-        attributes('Implementation-Title': project_name, 'Implementation-Version': project_version)
-    }
-}
+archivesBaseName = 'alpha-vantage-scraper'
+group = 'io.github.mainstringargs'
+version = '1.0'
 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-            groupId project_group
-            artifactId project_name
-            version project_version
+
+
+
+modifyPom {
+    project {
+        name 'alpha-vantage-scraper'
+        description 'Scraper Library for Alpha Vantage Stock Data.'
+        url 'https://github.com/mainstringargs/alpha-vantage-scraper'
+        inceptionYear '2018'
+        scm {
+            url 'https://github.com/mainstringargs/alpha-vantage-scraper'
+            connection 'https://github.com/mainstringargs/alpha-vantage-scraper.git'
+            developerConnection 'https://github.com/mainstringargs/alpha-vantage-scraper.git'
         }
-    }
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        html.enabled false
-    }
-}
-
-check.dependsOn jacocoTestReport
-
-/**bintray {
-    user = System.getenv('bintray_user') ?: bintray_user
-    key = System.getenv('bintray_key') ?: bintray_key
-    publish = true //If version should be auto published after an upload
-    publications = ['mavenJava']
-    pkg {
-        repo = 'maven'
-        name = project_name
-        websiteUrl = "https://github.com/patriques82/$project_name"
-        vcsUrl = "https://github.com/patriques82/$project_name" + ".git"
-
-        githubRepo = "patriques82/$project_name"
-        githubReleaseNotesFile = 'README.md'
-        issueTrackerUrl = "https://github.com/patriques82/$project_name/issues"
-
-        licenses = ['Apache-2.0']
-        version {
-            name = project_version
-            vcsTag = project_version
-            desc = 'A Java wrapper to get stock data and stock indicators from the Alpha Vantage API'
-            released = new Date()
-            gpg {
-                sign = true
+        licenses {
+            license {
+                name 'MIT License'
+                url 'https://opensource.org/licenses/MIT'
+                distribution 'repo'
+            }
+        }
+        developers {
+            developer {
+                id 'mainstringargs'
+                name 'main(String[] args)'
+                email 'mainstringargs@github.io'
             }
         }
     }
-}*/
+}
 
+extraArchive {
+    sources = true
+    tests = true
+    javadoc = true
+}
+nexus {
+    sign = true
+    repositoryUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
+    snapshotRepositoryUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
+}
 
-
+nexusStaging {
+    packageGroup = "io.github.mainstringargs" //optional if packageGroup == project.getGroup()
+}
