--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     ext {
         project_name = project.name
         project_group = 'org.patriques'
-        project_version = 1.3
+        project_version = 1.4
     }
     repositories {
         jcenter()
@@ -22,6 +22,8 @@ plugins {
 
 apply plugin: 'java'
 apply plugin: 'java-library'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 apply plugin: 'eclipse'
 apply plugin: 'idea'
@@ -45,13 +47,14 @@ repositories {
 dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
+	compile "io.github.mainstringargs:stock-data-spi:1.1"
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
 archivesBaseName = 'alpha-vantage-scraper'
 group = 'io.github.mainstringargs'
-version = '1.0'
+version = '1.1'
 
 
 
