--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.patriques</groupId>
-	<artifactId>alphavantage4j</artifactId>
-	<version>1.4-SNAPSHOT</version>
+	<groupId>io.github.mainstringargs</groupId>
+	<artifactId>alpha-vantage-scraper</artifactId>
+	<version>1.2.0</version>
 	<packaging>jar</packaging>
 
 	<name>alphavantage4j</name>
