Fix version number
- Versions fixed on build.gradle and pom.xml
- Since there is a 1.3 tag, version was updated to 1.4.0 (following semantic versioning)
- Fix some references from the previous project
  - Fix group id on build.grade.
  - Fix project name references on pom.xml
  - Adds developer name on pom.xml

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
     ext {
         project_name = project.name
-        project_group = 'org.patriques'
+        project_group = 'io.github.mainstringargs'
         project_version = 1.4
     }
     repositories {
@@ -54,7 +54,7 @@ dependencies {
 
 archivesBaseName = 'alpha-vantage-scraper'
 group = 'io.github.mainstringargs'
-version = '1.2.0'
+version = '1.4.0'
 
 
 
